crates/marxml/tests/snapshots/fixture_suite__fixture_parse_success@17-lone-lt-in-prose.md.snap
---
source: crates/marxml/tests/fixture_suite.rs
expression: dump_doc(&doc)
input_file: crates/marxml/tests/fixtures/parse/17-lone-lt-in-prose.md
---
root_count = 0
