crates/marxml/tests/snapshots/fixture_suite__fixture_parse_success@18-text-with-many-blank-lines.md.snap
---
source: crates/marxml/tests/fixture_suite.rs
expression: dump_doc(&doc)
input_file: crates/marxml/tests/fixtures/parse/18-text-with-many-blank-lines.md
---
root_count = 1
root[0]:
  <wrapper>  @ L1:O0 -> L7:O60
    content="\n\n\nlots of blank lines around the body\n\n\n"
