crates/marxml/tests/snapshots/fixture_suite__fixture_parse_success@19-attr-order-preserved.md.snap
---
source: crates/marxml/tests/fixture_suite.rs
expression: dump_doc(&doc)
input_file: crates/marxml/tests/fixtures/parse/19-attr-order-preserved.md
---
root_count = 1
root[0]:
  <task z="last" a="first" m="middle" />  @ L1:O0 -> L1:O37
